--- a/pt/index-pt.html
+++ b/pt/index-pt.html
@@ -53,7 +53,7 @@
                         <span>▼</span>
                     </button>
                     <div class="translator-dropdown" id="translator-dropdown">
-                        <div class="language-option" onclick="window.location.href='../index-br.html'">
+                        <div class="language-option" onclick="window.location.href='../index.html'">
                             <span class="fi fi-br"></span>
                             <span>Português (BR)</span>
                         </div>
