--- a/pt/index-pt.html
+++ b/pt/index-pt.html
@@ -65,6 +65,10 @@
                             <span class="fi fi-us"></span>
                             <span>English</span>
                         </div>
+                        <div class="language-option" onclick="window.location.href='../es/index-es.html'">
+                            <span class="fi fi-es"></span>
+                            <span>Español</span>
+                        </div>
                     </div>
                 </div>
             </div>
