Deixando a section hero ativa apenas no bem-vindo da nav-bar

--- a/es/index-es.html
+++ b/es/index-es.html
@@ -94,6 +94,8 @@
         </div>
     </section>
 
+    <div class="section-separator"></div>
+
     <div class="toc-container" id="toc-container">
         <div class="toc-title">En esta sección</div>
         <div id="toc-content"></div>
