--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
         </div>
     </section>
 
+    <div class="section-separator"></div>
+
     <!-- Table of Contents -->
     <div class="toc-container" id="toc-container">
         <div class="toc-title">Nesta seção</div>
