--- a/en/index-en.html
+++ b/en/index-en.html
@@ -94,6 +94,8 @@
         </div>
     </section>
 
+    <div class="section-separator"></div>
+
     <div class="toc-container" id="toc-container">
         <div class="toc-title">In this section</div>
         <div id="toc-content"></div>
