--- a/pt/index-pt.html
+++ b/pt/index-pt.html
@@ -94,6 +94,8 @@
         </div>
     </section>
 
+    <div class="section-separator"></div>
+
     <div class="toc-container" id="toc-container">
         <div class="toc-title">Nesta secção</div>
         <div id="toc-content"></div>
