--- a/es/index-es.html
+++ b/es/index-es.html
@@ -39,11 +39,8 @@
                     </div>
                 </button>
 
-                <button class="theme-toggle" onclick="toggleTheme()" title="Cambiar tema">
-                    <svg id="theme-icon" class="theme-icon" viewBox="0 0 24 24">
-                        <path
-                            d="M20.354 15.354A9 9 0 718.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
-                    </svg>
+                <button class="theme-toggle" onclick="toggleTheme()" title="Alternar tema">
+                    <div class="sun-icon" id="theme-icon"></div>
                 </button>
 
                 <div class="translator">
